After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 708864 - mp4mux: Does not negotiate due to framerate caps not set on peer pad
mp4mux: Does not negotiate due to framerate caps not set on peer pad
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-good
1.2.0
Other Linux
: Normal normal
: 1.2.1
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2013-09-26 18:42 UTC by Hans Månsson
Modified: 2013-09-30 08:40 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
fix (877 bytes, patch)
2013-09-26 18:44 UTC, Hans Månsson
committed Details | Review

Description Hans Månsson 2013-09-26 18:42:16 UTC
Since gstreamer added the "Stricter (correct) caps subset checking" some pipelines does not work.
Example:
rtspsrc location="..." ! rtph264depay ! h264parse ! mp4mux ! fakesink

This is issue occurs due to the mp4mux require the framerate set in the peer caps which it's not.

It seems that this exact problem has been fixed for the matroskamux but not mp4mux.
commit 2a8566ddec7cdacec68413ebd81fbe5c4182bbdc
Author: Wim Taymans <wim.taymans@collabora.co.uk>
Date:   Tue Aug 27 15:25:16 2013 +0200

    matroska-mux: remove framerate restriction

    Remove the framerate restriction on the caps.

It might be good to check if this issue affects all or other muxers.
Comment 1 Hans Månsson 2013-09-26 18:44:34 UTC
Created attachment 255868 [details] [review]
fix
Comment 2 Sebastian Dröge (slomo) 2013-09-28 11:02:29 UTC
commit 041946423a15228d6b8c07eaf8fcf3b3b803e2b6
Author: Hans Månsson <hansm@axis.com>
Date:   Thu Sep 26 20:41:26 2013 +0200

    mp4mux: Do not require framerate in peer video caps
    
    Remove the framerate restriction on the caps.
    
    Reference: https://bugzilla.gnome.org/show_bug.cgi?id=708864