mp4mux: Do not require framerate in peer video caps

Remove the framerate restriction on the caps.

Reference: https://bugzilla.gnome.org/show_bug.cgi?id=708864